# genshin-wish

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: CLAUDE.md  main.py  plot_utils.py
app/tabs/: character.py  column.py  fan.py  joint.py  long_term.py  multi_gold.py  nstd.py  radiance.py  standard.py  weapon.py
docs/: .gitignore  CLAUDE.md  algorithms.md  analysis.md  architecture.md  mechanism.md  plots.md  usage.md
scripts/: CLAUDE.md  README.md  _test_cli.py  _test_core.py  _test_weapon.py  clt_error.py  main_analysis.py  main_plot.py  plot_all.py  plot_nstd.py  solver_compare.py
scripts/analysis/: CLAUDE.md  _common.py  clt_error.py  run_all.sh  run_task1.sh  run_task2.sh  run_task3.sh  solver_compare.py  task1_n_up_to_pulls.py  task2_n_up_n_std_to_pulls.py  task3_n_up_to_n_std.py  up_dist_methods.py  write_readme.py
scripts/cli_examples/: calc_char.sh  calc_joint.sh  calc_prob.sh  calc_std.sh  calc_weapon.sh  plot.sh  plot_char.sh  plot_joint.sh  plot_nstd.sh  plot_radiance.sh  plot_weapon.sh
scripts/plots/: character.py  joint.py  long_term.py  multi_gold.py  nstd.py  radiance.py  weapon.py
src/genshin_wish/: __init__.py  _capture_radiance.py  _constants.py  _dp_golds.py  _gold.py  _player_pulls.py  character.py  joint.py  long_term.py  standard.py  weapon.py
src/genshin_wish/cli/: __init__.py  main.py
src/genshin_wish/viz/: __init__.py  _base.py  cdf.py  column.py  fan.py  heatmap.py  (+8 more)
tests/: test_character.py  test_cli.py  test_compare_ref.py  test_gold.py  test_long_term.py  test_player_pulls.py  test_standard.py  test_weapon.py
